exec command fix